excel data driven and providing

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,18 @@
 			<artifactId>cucumber-testng</artifactId>
 			<version>7.15.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.5</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.5</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
@@ -119,7 +131,6 @@
 				</pluginManagement>
 			</build>
 		</profile>
-		
 		<profile>
 			<id>CucumberTest</id>
 			<build>
@@ -139,7 +150,6 @@
 				</pluginManagement>
 			</build>
 		</profile>
-		
 	</profiles>
 	<build>
 		<pluginManagement>
