--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>5.2.5</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-grid -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-grid</artifactId>
+			<version>4.16.1</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
